--- a/UNAG/templates/general/administracion_index.html
+++ b/UNAG/templates/general/administracion_index.html
@@ -7,6 +7,11 @@
       <a href = "#">Men&uacute; Principal</a>
     </li>
      <li>
+      <a href = "{% url 'registro_alumno_excel' %}">
+        <span class="glyphicon glyphicon-user">&nbsp;</span>Importar Alumnos desde Excel
+      </a> 
+    </li>
+     <li>
       <a href = "{% url 'vista_administracion_recursohumano' %}">
         <span class="glyphicon glyphicon-user">&nbsp;</span>Administrar recurso humano
       </a> 
