--- a/UNAG/templates/general/administracion_index.html
+++ b/UNAG/templates/general/administracion_index.html
@@ -4,12 +4,7 @@
 {% block navlist %}
 	<ul  class = "nav nav-pills nav-stacked" > 
   	<li class="active">
-      <a href = "#">Men&uacute; Principal</a>
-    </li>
-     <li>
-      <a href = "{% url 'registro_alumno_excel' %}">
-        <span class="glyphicon glyphicon-user">&nbsp;</span>Importar Alumnos desde Excel
-      </a> 
+      <a href = "#">Menú Principal</a>
     </li>
      <li>
       <a href = "{% url 'vista_administracion_recursohumano' %}">
