--- a/UNAG/templates/general/recursohumano_index.html
+++ b/UNAG/templates/general/recursohumano_index.html
@@ -24,7 +24,8 @@
 					</a>
 					{% endif %} 
 					<br><br>
-					<a href="{% url 'vista_nuevo_docente' %}"  class="btn btn-default">
+					
+					<a href="{% url 'vista_nuevo_catedratico' %}"  class="btn btn-default">
 						<span class="glyphicon glyphicon-plus">&nbsp;</span>Catedratico
 					</a>
 					<p class="alert alert-warning">
