Solucion URL excel alumno

--- a/UNAG/templates/alumnos/registro_primer_ingreso.html
+++ b/UNAG/templates/alumnos/registro_primer_ingreso.html
@@ -1,4 +1,4 @@
-{% extends "alumnos/menu_izquierdo.html" %}
+{% extends "alumnos/menu_principal.html" %}
 
 {% block css %}
 		{% include "utilidades/waiting_ajax.html" %}
