Modificación de código para agregar al sub-menú el botón catedrático
Modificación del código en apps->registro, en el templates registro
agregue menu principal del catedratico, urls de registro agregue la url
del menu principal.

--- a/UNAG/templates/home/menu_principal2.html
+++ b/UNAG/templates/home/menu_principal2.html
@@ -38,20 +38,37 @@
 
 				<center>
 				<a href="{% url 'vista_main_administration' %}"><img src="/media/images/Windows Mobility Center.png" class="img-circle" width="120" height="120">
-				<h3>Administración</h3></a></center>
+				<h3>Administración</h3>
+			    </a>
+			    </center>
 				<p>Realice operaciones de mantenimiento de Recursos Humanos, Departamento
             académico, Carreras, Asignaturas entre otras.</p>
 			</div>
+
 			<div class="row">
 				<a href="{% url 'alumno_menu_principal' %}">
 					<div class="col-md-4 well" style="height: 280px;">
-						<center>
-							<img src="/media/images/student-icon.png" class="img-circle" width="120" height="120">
-							<h3>Alumnos</h3>
-						</center>
-						<p>Realice todas las operaciones que involucran a los estudiantes.</p>
-					</div>
+				
+				<center>
+				<img src="/media/images/student-icon.png" class="img-circle" width="120" height="120">
+				<h3>Alumnos</h3>
 				</a>
+				</center>
+				<p>Realice todas las operaciones que involucran a los estudiantes.</p>
+			</div>	
+			
+
+			<div class="row">
+				<a href="{% url 'catedratico_menu_principal' %}">
+					<div class="col-md-4 well" style="height: 280px;">
+						<center>
+							<img src="/media/images/cate.jpg" class="img-circle" width="120" height="120">
+							<h3>Catedráticos</h3>
+				</a>
+						</center>
+						<p>Realice todas las operaciones que involucran a los catedráticos.</p>
+					</div>
+				
 			</div>
 			<!--
 			
